Update drawer drops
- Updated getDrops to simplify handling
- sneak-wrenching non-empty drawer not puts it directly into the inventory (addresses #8)